<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lovelife.lovelife.RegisterActivity"
    tools:showIn="@layout/app_bar_register">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#D1000000"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/loveScroll_marginBottom"
            android:layout_weight="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:layout_marginTop="@dimen/lovetheme_maring_top"
                    android:theme="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/regRetypePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_theme"
                        android:hint="@string/retypePassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</RelativeLayout>
